--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  dio: ^4.0.6
+  freezed_annotation: ^2.2.0
+  flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
+  injectable: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,7 +43,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  freezed: ^2.3.2
+  build_runner: ^2.3.3
+  injectable_generator: ^2.1.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
